--- a/TN.HTML
+++ b/TN.HTML
@@ -14,7 +14,7 @@
 
 <body>
 
-<p align="center"><img src="pics/tn (1).png" alt="map of tunisia" usemap="#tn_map"></p>
+<p align="center"><img src="tn (1).png" alt="map of tunisia" usemap="#tn_map"></p>
 
 <map name="tn_map">
 
